--- a/styles/menu.module.scss
+++ b/styles/menu.module.scss
@@ -29,7 +29,7 @@
     width: 224px;
 
     opacity: 0;
-    transform: scale(0.6) translate(0, 60px) rotateX(-1deg);
+    transform: scale(0.6) translate(0, 60px) rotateZ(-1deg);
     transform-style: preserve-3d;
     transform-origin: top left;
 
